--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,4 @@
-.logo.vite:hover {
-  filter: drop-shadow(0 0 2em #747bff);
-}
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafb);
-}
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -21,43 +15,55 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.container {
+:root, body, #root, #app {
+  width: 100%;
+  height: 100%;
   margin: 0;
-  padding-top: 10vh;
+}
+
+#app {
+  padding: 2em;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 2em;
+}
+
+.app-title {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
-}
-
-.row {
+.viewer {
+  flex-grow: 1;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+/* Switch to column on mobile */
+@media (max-width: 768px) {
+  .viewer {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
 }
 
-a:hover {
-  color: #535bf2;
+#canvas {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
-h1 {
-  text-align: center;
+.controls {
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.control-slider {
+  display: flex;
+  flex-direction: column;
 }
 
 input,
@@ -73,6 +79,8 @@ button {
   transition: border-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
+
+/* All the stuff below is from Tauri/Vite. */
 
 button {
   cursor: pointer;
