--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,15 @@
   flex-direction: column;
 }
 
+.rotation-buttons {
+  display: flex;
+  gap: 0.5em;
+}
+
+.rotation-button {
+  flex-grow: 1;
+}
+
 .axis-buttons {
   display: flex;
   gap: 0.5em;
